now the base root element is set

--- a/resources/css/stylesHD.css
+++ b/resources/css/stylesHD.css
@@ -1,12 +1,18 @@
 /***************************************************************************
  *                                                                         *
+ *                   only change this value for DPI                        *
+ *                                                                         *
+ **************************************************************************/
+.root {
+    -fx-font-family: Cantarell;
+    -fx-font-size: 11px;
+}
+
+/***************************************************************************
+ *                                                                         *
  *                             HeaderView                                  *
  *                                                                         *
  **************************************************************************/
-
-* {
-    -fx-font-family: Cantarell;
-}
 
 #header {
     -fx-background-color: #eeeeee; /* macarena */
