--- a/resources/css/stylesLow.css
+++ b/resources/css/stylesLow.css
@@ -1,14 +1,18 @@
 /***************************************************************************
  *                                                                         *
+ *                   only change this value for DPI                        *
+ *                                                                         *
+ **************************************************************************/
+.root {
+    -fx-font-family: Cantarell;
+    -fx-font-size: 9px;
+}
+
+/***************************************************************************
+ *                                                                         *
  *                             HeaderView                                  *
  *                                                                         *
  **************************************************************************/
-
-/* Factor from 4K to Low: / 2.84 */
-
-* {
-    -fx-font-family: Cantarell;
-}
 
 #header {
     -fx-background-color: #eeeeee; /* macarena */
@@ -17,8 +21,8 @@
 
 #helpBtn, #backBtn, #settingsBtn, #reloadKeyBtn{
     /*-fx-padding: 5;*/
-    -fx-background-radius: 4px;
-    -fx-border-radius:4px;
+    -fx-background-radius: 0.308em;
+    -fx-border-radius: 0.308em;
     -fx-border-color:#A7A7A7;
     -fx-background-color: #EAEAEA;
 }
@@ -38,8 +42,8 @@
     -fx-fit-to-width: true;
     -fx-content-display: left;
     -fx-border-color:#A7A7A7;
-    -fx-background-radius: 4px;
-    -fx-border-radius:4px;
+    -fx-background-radius: 0.308em;
+    -fx-border-radius: 0.308em;
     -fx-font-family: "DejaVu Sans";
     -fx-background-color: #EAEAEA;
 }
@@ -49,16 +53,20 @@
     -fx-cursor: hand;
 }
 
+.homeButtonBoxes {
+    -fx-spacing: 6.154em;
+}
+
 .BigFont{
-    -fx-font-size: 33 rem;
+    -fx-font-size: 2.538em;
 }
 
 .SmallFont{
-    -fx-font-size: 24 rem;
+    -fx-font-size: 1.846em;
 }
 
 #contentBox {
-    -fx-spacing: 20px;
+    -fx-spacing: 1.538em;
 }
 
 /***************************************************************************
@@ -69,15 +77,15 @@
 .descriptionLbl{
     -fx-wrap-text: true;
     -fx-alignment: center-left;
-    -fx-font-size: 16pt;
-    -fx-padding: 20;
+    -fx-font-size: 1.654em;
+    -fx-padding: 1.538em;
 }
 
 .titleLbl {
-    -fx-font-size: 20;
+    -fx-font-size: 2.256em;
     -fx-wrap-text: true;
     -fx-alignment: center-left;
-    -fx-padding: 20;
+    -fx-padding: 1.538em;
     -fx-font-weight: bold;
 }
 
@@ -102,7 +110,7 @@
 
 .statusLbl{
     -fx-text-fill: white;
-    -fx-font-size: 16px;
+    -fx-font-size: 1.231em;
 }
 
 .descriptionBox {
@@ -114,14 +122,14 @@
 .keyFld {
     -fx-background-color: #e2e2e2;
     -fx-font-family: Monospaced;
-    -fx-font-size: 30pt;
+    -fx-font-size: 3.077em;
     -fx-text-alignment: center;
     -fx-alignment: center;
 }
 
 .titled-pane > .title {
     /*-fx-pref-height: 36.0;*/
-    -fx-font-size: 16pt;
+    -fx-font-size: 1.641em;
 }
 
 /***************************************************************************
@@ -145,14 +153,14 @@
 .supporterDescriptionLbl{
     -fx-wrap-text: true;
     -fx-alignment: center-left;
-    -fx-font-size: 16pt;
-    -fx-padding: 20;
+    -fx-font-size: 1.641em;
+    -fx-padding: 1.538em;
 }
 
 .supporterBtn {
-    -fx-font-size: 12pt;
+    -fx-font-size: 1.231em;
     -fx-alignment: center;
-    -fx-border-radius: 5px;
+    -fx-border-radius: 0.385em;
     -fx-background-color: white;
     -fx-border-color: lightgrey;
 
@@ -181,11 +189,11 @@
 }
 
 #connectBtn, #startServiceBtn{
-    -fx-padding: 15 40 15 40;
+    -fx-padding: 1.154em 3.077em 1.154em 3.077em;
     -fx-alignment: center;
-    -fx-font-size: 16;
-    -fx-background-radius: 4px;
-    -fx-border-radius:4px;
+    -fx-font-size: 1.231em;
+    -fx-background-radius: 0.308em;
+    -fx-border-radius: 0.308em;
     -fx-border-color:#A7A7A7;
     -fx-background-color: #EAEAEA;
 }
@@ -202,14 +210,14 @@
  **************************************************************************/
 
 .settingsBoxes{
-    -fx-padding: 30;
+    -fx-padding: 2.308em;
 }
 
 .slider .thumb {
-    -fx-pref-height: 30;
-    -fx-pref-width: 30;
-    -fx-background-radius: 30px;
-    -fx-border-radius:30px;
+    -fx-pref-height: 2.308em;
+    -fx-pref-width: 2.308em;
+    -fx-background-radius: 2.308em;
+    -fx-border-radius: 2.308em;
     -fx-border-color:#A7A7A7;
     -fx-background-color: #EAEAEA;
 }
@@ -223,11 +231,11 @@
 .slider {
     -fx-border-color: white;
     -fx-border-style: dashed;
-    -fx-border-width: 2;
+    -fx-border-width: 0.154em;
 }
 
 .sliderTxts {
-    -fx-font-size: 200%;
+    -fx-font-size: 2em;
 }
 
 .toggles {
@@ -236,16 +244,16 @@
 
 .toggles .thumb-area {
     -fx-background-color: #EAEAEA;
-    -fx-pref-width: 70;
-    -fx-pref-height: 30;
-    -fx-padding: 20;
+    -fx-pref-width: 5.385em;
+    -fx-pref-height: 2.308em;
+    -fx-padding: 1.538em;
 }
 
 .toggles .thumb{
-    -fx-pref-width: 40;
-    -fx-pref-height: 40;
-    -fx-background-radius: 30px;
-    -fx-border-radius:30px;
+    -fx-pref-width: 3.077em;
+    -fx-pref-height: 3.077em;
+    -fx-background-radius: 2.308em;
+    -fx-border-radius: 2.308em;
     -fx-border-color:#A7A7A7;
     -fx-background-color: #EAEAEA;
 }
@@ -264,15 +272,15 @@
 }
 
 .settingsLabels{
-    -fx-font-size: 12pt;
+    -fx-font-size: 1.231em;
 }
 
 .expertSettingsBtn{
-    -fx-padding: 20 30 20 30;
+    -fx-padding: 1.538em 2.308em 1.538em 2.308em;
     -fx-alignment: center;
-    -fx-font-size: 12pt;
-    -fx-background-radius: 4px;
-    -fx-border-radius:4px;
+    -fx-font-size: 1.231em;
+    -fx-background-radius: 0.308em;
+    -fx-border-radius: 0.308em;
     -fx-border-color:#A7A7A7;
     -fx-background-color: #EAEAEA;
 }
