Expert settings styling

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -312,10 +312,10 @@
  *                                                                         *
  **************************************************************************/
 
-.expertSettingsLbl {
-
+.settingsPane > .label {
+    -fx-font-size: 1.3em;
 }
 
-.expertSettingsFld {
-
+.settingsPane > .text-field{
+    -fx-font-size: 1.3em;
 }
