Styling for Dialog of supporters and strings.class (forgot to open new branch)

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -291,6 +291,12 @@
     -fx-font-size: 1.231em;
 }
 
+/***************************************************************************
+ *                                                                         *
+ *                             Expert Settings                             *
+ *                                                                         *
+ **************************************************************************/
+
 .expertSettingsBtn{
     -fx-padding: 1.538em 2.308em 1.538em 2.308em;
     -fx-alignment: center;
@@ -306,16 +312,24 @@
     -fx-cursor: hand;
 }
 
-/***************************************************************************
- *                                                                         *
- *                             Expert Settings                             *
- *                                                                         *
- **************************************************************************/
-
 .settingsPane > .label {
     -fx-font-size: 1.3em;
 }
 
 .settingsPane > .text-field{
+    -fx-font-size: 1.3em;
+}
+
+/***************************************************************************
+ *                                                                         *
+ *                             Dialog Supporter                            *
+ *                                                                         *
+ **************************************************************************/
+
+#dialogAttributePane > .label {
+    -fx-font-size: 1.3em;
+}
+
+#dialogAttributePane > .text-field {
     -fx-font-size: 1.3em;
 }
